<resources>
    <string name="app_name">Good直播</string>
    <string name="st_second">%s 秒</string>
    <string name="st_minutes">%s 分</string>
    <string name="st_terms_of_use_and_privacy_policy">《Good直播用户协议》</string>
    <string name="st_read_and_agree">注册或登录代表您同意</string>
    <string name="st_wechat">微信</string>
    <string name="st_mobile">手机</string>


    <string name="st_mobile_login">手机号登录</string>

    <string name="st_forget_password">忘记密码</string>
    <string name="st_input_phone_number">请输入11位手机号</string>
    <string name="st_input_verification_code">请输入验证码</string>
    <string name="st_input_password">请输入密码</string>
    <string name="st_send_code">获取验证码</string>
    <string name="st_regedit_now">立即注册</string>
    <string name="live_guard">守护</string>
    <string name="st_ok">确定</string>
    <string name="st_cancel">取消</string>
    <string name="st_share">分享</string>
    <string name="st_close">关闭</string>


    <string name="st_home_page">首页</string>
    <string name="st_home_short">短视频</string>
    <string name="st_home_moment">动态</string>
    <string name="st_home_mine">我的</string>

    <string name="st_gold">金币</string>
    <string name="st_unlock_gold">%s 金币</string>

    <string name="st_ten_thousand">%s 万</string>
    <string name="st_nothing">暂无数据</string>

    <string name="st_pk_time">倒计时 %s</string>
    <string name="st_punish_time">惩罚中 %s</string>
    <string name="st_publish_waring">尊敬的用户，您发布的内容须遵守相关法律法规和平台规则,请严格遵守相关规定，以免违规。</string>

    <string name="st_publish_moment_tips_1">记录生活，拥抱美好...</string>
    <string name="st_publish_moment_tips_2">参与话题，让更多人看到</string>
    <string name="st_publish_moment_price">设置付费动态价格</string>

    <string name="st_topic">话题</string>
    <string name="st_pulish_moment">发动态</string>
    <string name="st_pulish">发布</string>

    <string name="st_live_title">直播标题</string>
    <string name="st_live_push_title">给直播写个标题吧</string>
    <string name="st_category">频道</string>
    <string name="st_start_live">开始直播</string>


    <string name="st_normal_room">普通房间</string>
    <string name="st_price_room">付费房间</string>
    <string name="st_password_room">私密房间</string>

    <string name="st_login_out">登录超时,请重新登录</string>
    <string name="st_upload_error">上传失败,请稍后再试</string>
    <string name="st_error">错误</string>
    <string name="st_select_thumb">请选择封面</string>
    <string name="st_select_category">请选址直播频道</string>
    <string name="st_input_live_title">请输入标题</string>

    <string name="st_input_live_price">请输入收费金额</string>
    <string name="st_input_price_tips">设置付费金额</string>


    <string name="st_input_live_password">请输入直播密码</string>
    <string name="st_input_value">请输入内容</string>


    <string name="Dermabrasion">磨皮</string>
    <string name="White">美白</string>
    <string name="Ruddy">红润</string>
    <string name="Face">美颜</string>
    <string name="Filter">滤镜</string>

    <string name="st_live_rank_text">贡献榜</string>
    <string name="st_live_rank">贡献榜 %s</string>
    <string name="st_live_ban_text">禁言列表</string>
    <string name="st_live_ban">禁言</string>
    <string name="st_live_guard">守护 %s</string>
    <string name="st_live_guard_nums">守护 %s人</string>
    <string name="st_live_buy_guard">开通守护</string>
    <string name="st_live_watcher">%s人观看</string>
    <string name="st_live_income_diamond_anchor">本场收入钻石</string>
    <string name="st_live_income_diamond">收入钻石</string>
    <string name="st_live_start_error">开播失败</string>
    <string name="live_gift_send_lian_3">连送 x</string>
    <string name="live_gift_send_lian">连送</string>
    <string name="live_gift_send_lian_2">x</string>

    <string name="st_post_a_comment">说点什么~</string>
    <string name="st_post_a_moment_comment">发布评论</string>
    <string name="st_post">发送</string>
    <string name="st_gift">礼物</string>
    <string name="st_send_gift">赠送</string>
    <string name="st_send_gift_2">送了</string>
    <string name="st_gift_charge">充值 ></string>
    <string name="st_gift_tips_1">请选择礼物</string>
    <string name="st_gift_tips_2">金币不足,请前往充值</string>
    <string name="st_follow">关注</string>
    <string name="st_followed">已关注</string>
    <string name="st_im">私信</string>
    <string name="st_home">主页</string>


    <string name="st_new_comment">最新评论 (%s)</string>
    <string name="st_comment_repaly_num">%s 条回复</string>
    <string name="st_mine_id">ID：%s</string>
    <string name="st_login_regedit">登录 / 注册</string>


    <string name="st_fans">粉丝</string>
    <string name="st_fans_count">粉丝: %s</string>
    <string name="st_vister">访客</string>

    <string name="st_mine_wallect">我的钱包</string>
    <string name="st_mine_vip">贵族中心</string>
    <string name="st_mine_level">用户等级</string>
    <string name="st_mine_shop">直播小店</string>
    <string name="st_mine_moment">我的动态</string>
    <string name="st_mine_tiktok">我的短视频</string>
    <string name="st_mine_collect">我的收藏</string>
    <string name="st_mine_rank">亲密榜</string>
    <string name="st_mine_identification">认证主播</string>
    <string name="st_mine_room_manager">房间管理</string>
    <string name="st_mine_invite">邀请好友</string>
    <string name="st_mine_incoming">收益记录</string>
    <string name="st_mine_guild">主播公会</string>
    <string name="st_mine_business">商务合作</string>
    <string name="st_mine_setting">设置</string>

    <string name="st_vip_1">游侠</string>
    <string name="st_vip_2">骑士</string>
    <string name="st_vip_3">公爵</string>
    <string name="st_vip_4">国王</string>
    <string name="st_vip_enter_room">进入直播间</string>
    <string name="st_live_hot">热度: %s</string>
    <string name="st_in">在</string>
    <string name="st_streamer_room">的直播间</string>
    <string name="st_streamer_send_a">送出一个</string>


    <string name="st_shop_item_list">商品列表</string>

    <string name="st_link_on">开启连麦</string>
    <string name="st_link_off">关闭连麦</string>

    <string name="st_anchor_link_on">主播开启了连麦</string>
    <string name="st_anchor_link_off">主播关闭了连麦</string>

    <string name="st_start_pk">发起PK</string>
    <string name="st_room_setting">房间管理</string>


    <string name="st_pk_searching">匹配中</string>
    <string name="st_pk_end">结束PK</string>
    <string name="st_pk_is_running">您已经在PK中</string>

    <string name="st_link_tips1">向你发出一个连麦请求</string>

    <string name="st_accept">接受</string>
    <string name="st_dialog_tips1">了解贵族特权  ></string>

    <string name="st_set_manager">设置房管</string>
    <string name="st_cancel_manager">取消房管</string>
    <string name="st_success">成功</string>
    <string name="st_publish_success">发布成功</string>
    <string name="st_manager_list">管理员列表</string>
    <string name="st_ban_list">禁言列表</string>
    <string name="st_live_rank_list">贡献榜</string>


    <string name="st_live_guardian_intimacy">贡献%s金币</string>

    <string name="st_live_guardian_type_1">年守护</string>
    <string name="st_live_guardian_type_tips_1">独享踢人、禁言尊贵特权</string>

    <string name="st_live_guardian_type_2">月守护</string>
    <string name="st_live_guardian_type_tips_2">专属礼物享2倍经验特权</string>

    <string name="st_live_guardian_type_3">7日守护</string>
    <string name="st_live_guardian_type_tips_3">送出指定礼物则自动开通7日守护</string>

    <string name="st_open">开通</string>
    <string name="st_open_9off">续费(9折)</string>
    <string name="st_over_time">%s 到期</string>
    <string name="st_live_guardian_type_info_title_1">专属身份标识</string>
    <string name="st_live_guardian_type_info_1">成为守护后，在主播直播间麦序、公聊区域、真爱团中展示特殊身份标识</string>
    <string name="st_live_guardian_type_info_2">成为守护后，进入主播直播间拥有进场弹幕和欢迎语</string>

    <string name="st_live_guardian_type_info_title_2">专属礼物</string>
    <string name="st_live_guardian_type_info_3">开通守护后享有专属守护礼物使用权</string>

    <string name="st_live_guardian_type_info_title_3">尊贵特权</string>
    <string name="st_live_guardian_type_info_4">年守护拥有直播间踢人/禁言权限</string>

    <string name="st_tips">提醒</string>
    <string name="st_tips_gold_is_low_1">您的金币不足</string>
    <string name="st_go_pay_gold">立即充值</string>

    <string name="st_my_gold">我的金币: %s</string>
    <string name="st_go_charge">充值 ></string>
    <string name="st_search_topic_tips">#话题搜索</string>
    <string name="st_hot_topic">热门话题</string>

    <string name="st_topic_list_title">#%s#</string>
    <string name="st_topic_list_num">%s人讨论</string>


    <string name="tc_ugc_video_list_adapter_video_state_normal">已审核</string>
    <string name="tc_ugc_video_list_adapter_video_state_in_audit">审核中</string>
    <string name="tc_ugc_video_list_adapter_video_state_pornographic">涉黄</string>
    <string name="tc_vod_player_activity_download_video_is_downloading">正在下载...</string>
    <string name="tc_vod_player_activity_download_video_download_failed">下载失败</string>


    <string name="input_user_nickname">请输入用户昵称</string>
    <string name="user_nickname">用户昵称</string>
    <string name="selec_upload_method">选择上传方式</string>
    <string name="idif_under_review">您的信息正在审核中，请耐心等待</string>
    <string name="shortcut_key_num">您已添加3项快捷语，超出上限</string>
    <string name="kick_success">踢人成功</string>
    <string name="kick_fail">踢人失败</string>
</resources>
