<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="65dp"

        android:background="@drawable/shape_corner_white_15"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginVertical="20dp"
            android:gravity="center"
            android:text="@string/st_price_room"
            android:textColor="@color/color_black_333333"
            android:textSize="18sp" />
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_corner_line_gray_d3d3d3_5"
            android:hint="@string/st_input_live_password"
            android:padding="10dp"

            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_price"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_corner_line_gray_d3d3d3_5"
            android:hint="@string/st_input_live_price"
            android:padding="10dp"
            android:singleLine="true"
            android:inputType="number"
            android:textColor="@color/black"
            android:textSize="14sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="35dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_close"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center"

                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:background="@drawable/shape_corner_line_gray_d3d3d3_45"
                android:gravity="center"
                android:paddingHorizontal="10dp"
                android:text="@string/st_cancel"
                android:textColor="@color/black"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/tv_confirm"
                android:layout_width="0px"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:background="@drawable/shape_theme_round"
                android:gravity="center"
                android:text="@string/st_ok"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>