<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/price_rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_corner_white_5"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/st_tips"
            android:textColor="@color/black"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/tv_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/st_tips_gold_is_low_1"
            android:textColor="@color/color_black_333333"
            android:textSize="15sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="0px"
                android:layout_weight="1"
                android:layout_height="32dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:background="@drawable/shape_corner_line_gray_d3d3d3_45"
                android:gravity="center"
                android:text="@string/st_cancel"
                android:textColor="@color/black"
                android:layout_marginHorizontal="5dp"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/tv_submit"
                android:layout_width="0px"
                android:layout_weight="1"
                android:layout_height="32dp"
                android:layout_marginHorizontal="5dp"
                android:layout_gravity="center"
                android:background="@drawable/shape_theme_round"
                android:gravity="center"
                android:text="@string/st_go_pay_gold"
                android:textColor="@color/white"
                android:textSize="12sp" />


        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
