<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_corner_white_5">


    <LinearLayout
        android:layout_width="@dimen/dp_240"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/st_tips"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/tv_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textColor="@color/black"

            android:textSize="15sp" />


        <EditText
            android:id="@+id/et_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:hint="请输入密码"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="@dimen/dp_26"
            android:orientation="horizontal">


            <RelativeLayout
                android:id="@+id/rl_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"

                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_cancel"
                    android:layout_width="@dimen/dp_90"
                    android:layout_height="@dimen/dp_32"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:background="@drawable/shape_line_gray2"
                    android:gravity="center"
                    android:text="@string/st_cancel"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/rl_submit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">


                <TextView
                    android:id="@+id/tv_submit"
                    android:layout_width="@dimen/dp_90"
                    android:layout_height="@dimen/dp_32"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:background="@drawable/shape_theme_round"

                    android:gravity="center"
                    android:text="@string/st_ok"
                    android:textColor="@color/white"
                    android:textSize="15sp" />


            </RelativeLayout>


        </LinearLayout>

    </LinearLayout>


</RelativeLayout>