<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="230dp"
        android:layout_height="170dp"
        android:layout_centerInParent="true"
        android:background="@drawable/shape_corner_white_5"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_info"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civ_avatar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="45dp"
                android:src="@mipmap/moren"
                app:civ_border_color="@android:color/transparent" />

            <TextView
                android:id="@+id/tv_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="@dimen/dp_4"
                android:layout_toRightOf="@id/civ_avatar"
                android:maxEms="5"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_nickname"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@id/civ_avatar"
                android:maxEms="5"
                android:textColor="@color/color_BDBDBD"
                android:textSize="13sp" />

        </RelativeLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:gravity="center"

            android:text="@string/st_link_tips1"
            android:textColor="@color/black"
            android:textSize="15sp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:background="@drawable/shape_corner_line_gray_d3d3d3_45"
                android:gravity="center"
                android:text="@string/st_cancel"
                android:textColor="@color/color_black_333333" />

            <TextView
                android:id="@+id/tv_submit"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:background="@drawable/shape_theme_round"
                android:gravity="center"
                android:text="@string/st_accept"
                android:textColor="@color/white" />


        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>